--- a/config.json
+++ b/config.json
@@ -28,8 +28,8 @@
         "bettermounthud",
         "controlify",
         "dynamic-fps",
-        "entity_model_features",
-        "entity_texture_features",
+        "entity-model-features",
+        "entity-texture-features",
         "language-reload",
         "main-menu-credits",
         "modmenu",
@@ -51,7 +51,7 @@
         "morechathistory",
         "moreculling",
         "optigui",
-        "reeses_sodium_options",
+        "reeses-sodium-options",
         "sodium-extra",
         "sodium",
         "zoomify",
@@ -61,22 +61,22 @@
         "extremesoundmuffler",
         "moreoverlays",
         "toastcontrol",
-        "justzoom_forge",
+        "justzoom-forge",
         "memorysettings",
         "oculus-mc",
-        "entity_collision_fps_fix",
+        "entity-collision-fps-fix",
         "invhud",
         "defaultoptions",
-        "clean_tooltips",
+        "clean-tooltips",
         "connectedness",
         "fallingleaves",
         "neat",
         "oculus-flywheel-compat",
         "reauth",
         "reforgium",
-        "rubidium_extras",
+        "rubidium-extras",
         "betteradvancements",
-        "chat_heads",
+        "chat-heads",
         "cherishedworlds",
         "jei",
         "simplerpc",
@@ -108,7 +108,7 @@
         "skinlayers3d",
         "biomemusic",
         "serverbrowser",
-        "aaa_particles",
+        "aaa-particles",
         "euphoriapatcher"
     ],
     "High": [
@@ -172,11 +172,12 @@
         "chunky",
         "ferritecore",
         "openloader",
-        "smoothboot(reloaded)",
+        "smoothboot",
+		"smooth-boot-reloaded",
         "allurement",
         "attributefix",
         "clumps",
-        "cofh_core",
+        "cofh-core",
         "create",
         "fastsuite",
         "yungsbetterjungletemples",
@@ -213,7 +214,7 @@
         "enderio",
         "endermanoverhaul",
         "endertanks",
-        "ends_delight",
+        "ends-delight",
         "extradisks",
         "extrastorage",
         "extremereactors2",
@@ -232,9 +233,9 @@
         "ftb-xmod-compat",
         "functionalstorage",
         "refinedstorageaddons",
-        "thermal_innovation",
-        "thermal_integration",
-        "thermal_locomotion",
+        "thermal-innovation",
+        "thermal-integration",
+        "thermal-locomotion",
         "trashcans",
         "twilightforest",
         "yungsbetterdungeons",
@@ -242,7 +243,7 @@
         "securitycraft",
         "mcw-windows",
         "bloodmagic",
-        "blue_skies",
+        "blue-skies",
         "botania",
         "botanypots",
         "botanytrees",
@@ -255,7 +256,7 @@
         "industrial-foregoing",
         "ironfurnaces",
         "ironjetpacks",
-        "irons_spellbooks",
+        "irons-spellbooks",
         "lootr",
         "lostcities",
         "macawsbridgesbop",
@@ -298,19 +299,19 @@
         "spark",
         "terrablender",
         "terralith",
-        "thermal_cultivation",
-        "thermal_dynamics",
-        "thermal_expansion",
-        "thermal_foundation",
+        "thermal-cultivation",
+        "thermal-dynamics",
+        "thermal-expansion",
+        "thermal-foundation",
         "torchmaster",
         "wirelesschargers",
         "yungsapi",
         "yungsbetterdeserttemples",
-        "ars_nouveau",
-        "ars_ocultas",
+        "ars-nouveau",
+        "ars-ocultas",
         "chunk pregenerator",
         "ironchests",
-        "iron_ender_chests",
+        "iron-ender-chests",
         "luckperms",
         "tombstone",
         "travelersbackpack",
@@ -319,17 +320,17 @@
         "yungsbridges",
         "serverconfigupdater",
         "servertabinfo",
-        "abnormals_delight",
+        "abnormals-delight",
         "advancedperipherals",
-        "ad_astra",
+        "ad-astra",
         "akashictome",
         "applied-botanics",
         "applied-mekanistics",
         "aquamirae",
-        "berry_good",
+        "berry-good",
         "blueprint",
         "bookshelf",
-        "buzzier_bees",
+        "buzzier-bees",
         "caelus",
         "carryon",
         "clickadv",
@@ -367,14 +368,14 @@
         "starlight",
         "storagedrawers",
         "swingthroughgrass",
-        "valhelsia_structures",
+        "valhelsia-structures",
         "waystones-forge",
         "xaerosworldmap",
-        "xaeros_minimap",
+        "xaeros-minimap",
         "ad-astra-giselle-addon",
         "architectury",
-        "ars_creo",
-        "ars_elemental",
+        "ars-creo",
+        "ars-elemental",
         "artifacts",
         "chalk",
         "charmofundying",
@@ -385,7 +386,7 @@
         "environmental",
         "fairylights",
         "galosphere",
-        "galosphere_delight",
+        "galosphere-delight",
         "goblintraders",
         "incubation",
         "integratedcrafting",
@@ -402,14 +403,14 @@
         "malum",
         "maxhealthfix",
         "neapolitan",
-        "obscure_api",
+        "obscure-api",
         "paintings",
         "patchouli",
         "placebo",
         "pneumaticcraft-repressurized",
         "rottencreatures",
         "runelic",
-        "savage_and_ravage",
+        "savage-and-ravage",
         "simplebackups",
         "smoothchunk",
         "sophisticatedbackpacks",
@@ -418,16 +419,16 @@
         "tetranomicon",
         "trashslot",
         "trolldom",
-        "upgrade_aquatic",
-        "valhelsia_core",
-        "valhelsia_furniture",
+        "upgrade-aquatic",
+        "valhelsia-core",
+        "valhelsia-furniture",
         "dismountentity",
         "appleskin",
         "cobblemon",
         "appleskin-fabric",
         "biomesoplenty-forge",
         "yungscavebiomes",
-        "alternate_current-mc1.20",
+        "alternate-current",
         "better-end",
         "better-nether",
         "fastasyncworldsave"
